2005-10-03 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: More source browser preference configuration.
	* gui/gui_regwin.cc: Turned register sheet rows and columns back
	on. (They were off because of a bug in gtkextra, but that bug is
	fixed now).
	* src/16bit-processors.cc, src/16bit-registers.cc, src/p18x.cc,
	src/tmr0.cc:
	The create+sfr_map() method was getting called twice fof the p18f
	devices.
	T0CON was not retaining its 0xff reset value.
	TMR0L was reporting the wrong value while it was turned off.
	* regression/run_regression.sh, regression/tmr0_16bit/18f452.lkr,
	regression/tmr0_16bit/Makefile,
	regression/tmr0_16bit/tmr0_16bit.asm,
	regression/tmr0_16bit/tmr0_16bit.stc:
	Added a regression test for TMR0.

2005-10-02 Borut Razem <borut.razem@siol.net>
	* gui/makefile.mingw: Updates to support user defined preferences.
	* doc/gpsimWin32.html: Use CSS

2005-10-01 Scott Dattalo <scott@dattalo.com>
	* src/processor.cc: Changed Processor::init_program_memory_at_index()
	so a derived processor can define its own bad_instruction type.

	Fixed a crashing bug in trim() when a empty was passed in.

2005-09-30 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src_asm.cc: Source
	browser clean up. 

2005-09-29 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc, gui/gui_src.h, gui/gui_src_asm.cc: More
	preferences work; now the colors for the source browser example
	text can be configured (this configuration doesn't map back into
	the source browser yet).

2005-09-28 Scott Dattalo <scott@dattalo.com>
	* src/16bit-registers.cc, src/16bit-registers.h, src/tmr0.cc,
	src/tmr0.h: The high byte of TMR0 for the 18F family was not
	updating correctly in certain circumstances (like during single
	stepping). Thanks to Robert Merkel <robert.merkel@benambra.org>
	for reporting this issue.

2005-09-27 Scott Dattalo <scott@dattalo.com>
	* gui/gui_menu.cc: Even More work on preferences dialog window.

2005-09-26 Scott Dattalo <scott@dattalo.com>