@@ -177,6 +177,10 @@ Pic14Bit::Pic14Bit()
 void Pic14Bit::create_symbols(void)
 {
   pic_processor::create_symbols();
+
+  // add a special symbol for W
+  symbol_table.add_w(W);
+
   symbol_table.add_register(m_portb);
   symbol_table.add_register(m_porta);
   symbol_table.add_register(m_trisb);
